new proj/src/objects/GE_SS_Field_Test__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_Hold_Time_mins__c</fullName>
        <label>Hold Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_If_Failure_Describe_Here__c</fullName>
        <label>If Failure, Describe Here</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Pressure_UOM__c</fullName>
        <label>Pressure UOM</label>
        <picklist>
            <picklistValues>
                <fullName>PSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Pressure__c</fullName>
        <label>Pressure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Test_Description__c</fullName>
        <label>Test Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Test_Duration__c</fullName>
        <label>Test Duration (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Test_Status__c</fullName>
        <label>Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Volume_UOM__c</fullName>
        <label>Volume UOM</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Field Tests</relationshipLabel>
        <relationshipName>Field_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Test</label>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Field Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>